vlib/v/checker/tests/function_wrong_return_type.out
vlib/v/checker/tests/function_wrong_return_type.v:2:9: error: cannot use `any_float` as type `int` in return argument
    1 | fn h() int {
    2 |     return 3.14
      |            ~~~~
    3 | }
    4 |
