vlib/v/checker/tests/function_wrong_return_type.vv
fn h() int {
	return 3.14
}

fn main() {
	d := h()
	println('$d')
}
